Fixed insensitive text color in backdrop entry
Use insensitive_fg_color for insensitive entry label in backdrop since
current color is the same as the background and makes the label invisible

--- a/Communitheme/gtk-3.0/_drawing.scss
+++ b/Communitheme/gtk-3.0/_drawing.scss
@@ -88,7 +88,7 @@
     box-shadow: $_blank_edge;
     color: if($c != $base_color, mix($tc, $c, 35%), $backdrop_insensitive_color);
 
-    label, & { color:  $backdrop_fg_color; }
+    label, & { color: $insensitive_fg_color; }
   }
   @if $t==osd {
     color: $osd_text_color;
